Make search repo drop-in replacement (#2828)
RISDEV-7500
Return domain objects so that it can partially replace the original repository.

* Move interface to domain package
* Fix import
* Add search integration test cases
* Fix courtType parameter assignment
* Add comments